--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
 		  <div class="top-bar-left">
 		    <ul class="menu reset-padding--left">
 		      <!-- <li class="menu-text">Site Title</li> -->
-		      <li><a href="#about">ABOUT ME</a></li>
+		      <li><a href="#about" class="reset-padding--left">ABOUT ME</a></li>
 		      <li><a href="#cv">CURRICULUM VITAE</a></li>
 		      <li><a href="#volunteer">VOLUNTEER WORK</a></li>
 		      <li><a href="#contact">CONTACT</a></li>
@@ -46,7 +46,7 @@
 		  </div>
 		  <div class="top-bar-right">
 		    <ul class="menu">
-		      <li><a href="#contact" class="button primary hide-for-small-only hide-for-medium-only">contact me</a></li>
+		      <li><a href="#contact" class="button primary hollow hide-for-small-only hide-for-medium-only">Have a job available?</a></li>
 		    </ul>
 		  </div>
 	  </div>
@@ -189,11 +189,13 @@
 	<div class="ws--sm contextual-bg--grey">
 	<div class="row">
 		<div class="columns medium-6 medium-offset-3 text-center">
-			<h3 class="reset-margin--top">Read my publication on ResearchGate</h3>
-			<h5><b>
+			<h3 class="reset-margin ws--xs">Read my publication on ResearchGate</h3>
+			<h5 class="reset-margin"><b>
 				Calcareous nannofossil and foraminifer biostratigraphy of the Campanian-Maastrichtian chalk of the Femern Bælt (Denmark-Germany)
 			</b></h5>
-			<i><a href="https://www.researchgate.net/publication/286379647_Calcareous_nannofossil_and_foraminifer_biostratigraphy_of_the_Campanian-Maastrichtian_chalk_of_the_Femern_Baelt_Denmark-Germany" target="_blank">Read on ResearchGate</a></i>
+			<div class="ws--sm reset-padding--bottom">
+				<i><a href="https://www.researchgate.net/publication/286379647_Calcareous_nannofossil_and_foraminifer_biostratigraphy_of_the_Campanian-Maastrichtian_chalk_of_the_Femern_Baelt_Denmark-Germany" target="_blank">Read on ResearchGate</a></i>
+			</div>
 		</div>
 	</div>
 </div>
@@ -202,7 +204,7 @@
 <div class="ws--lg">
 	<div class="row">
 		<div class="columns text-center">
-			<h2 class="reset-margin">Curriculum vitae</h2>
+			<h2 class="reset-margin">Curriculum Vitae</h2>
 			<hr class="divider">
 			<h3 class="reset-margin">Feel free to contact me for more details</h3>
 		</div>
@@ -358,7 +360,7 @@
 				  		<time class="h3">01-09-2009 – 11-12-2015</time>
 				  	</div>
 				  	<div class="columns medium-7">
-				  		<h5 class="reset-margin--top"><b>Active member of Steno,</b><br>student society of Geology, University of Copenhagen</h5>
+				  		<h5 class="reset-margin--top"><b>Active member of Steno,</b><br>Student society of Geology, University of Copenhagen</h5>
 				  		<small></small>
 				  	</div>
 				  </li>
@@ -419,7 +421,7 @@
 				  		<p class="invert reset-margin">&nbsp;</p>
 				  	</div>
 				  	<div class="columns small-9">
-				  		<p class="invert reset-margin">links</p>
+				  		<p class="invert reset-margin"></p>
 				  	</div>
 				  </div>
 			  
