--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
 	<div class="row">
 		<div class="medium-5 medium-push-7 columns">
 			<i class="h2">
-				Ever since I can remember rocks and especially fossils have fascinated me, resulting in a massive collection from around the World.
+				Ever since I can remember, rocks and especially fossils have fascinated me, resulting in a massive collection from around the World.
 			</i>
 			<br><br>
 			<p>
